--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@react-three/drei": "^9.108.1",
     "@react-three/fiber": "^8.16.8",
+    "camera-controls": "^2.9.0",
     "gsap": "^3.12.5",
     "leva": "^0.9.34",
     "r3f-perf": "^7.2.3",
