--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.3",
     "react-dom": "18.3",
     "three": "^0.166.1",
+    "vite-plugin-glsl": "^1.3.0",
     "zustand": "^5.0.1"
   }
 }
