--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "cozy-camp-fire",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "start": "vite",
-    "build": "vite build"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "4.3",
-    "vite": "^5.3.3",
-    "vite-plugin-restart": "^0.4.1"
-  },
-  "dependencies": {
-    "@react-three/drei": "^9.108.1",
-    "@react-three/fiber": "^8.16.8",
-    "@react-three/rapier": "^1.5.0",
-    "camera-controls": "^2.9.0",
-    "gsap": "^3.12.5",
-    "leva": "^0.9.34",
-    "r3f-perf": "^7.2.3",
-    "react": "18.3",
-    "react-dom": "18.3",
-    "three": "^0.166.1",
-    "vite-plugin-glsl": "^1.3.0",
-    "zustand": "^5.0.1"
-  }
+    "name": "Cozy-Camp",
+    "version": "1.0.0",
+    "description": "Make your cozy little camp scene",
+    "main": "server/server.js",
+    "scripts": {
+        "start": "node server --ignore client",
+        "dev": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
+        "install": "cd server && npm i && cd ../client && npm i",
+        "seed": "cd server && npm run seed",
+        "build": "cd client && npm run build"
+    },
+    "keywords": [],
+    "author": "Reid Back",
+    "license": "ISC",
+    "devDependencies": {
+        "concurrently": "^5.1.0"
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.3",
+        "dayjs": "^1.11.11",
+        "dotenv": "^16.4.5",
+        "gsap": "^3.12.5",
+        "lint": "^0.8.19",
+        "react-bootstrap": "^2.10.2",
+        "react-router-bootstrap": "^0.26.2",
+        "react-window": "^1.8.10"
+    }
 }
