--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "vite build"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "4.3",
-    "vite": "^5.3.3",
+    "vite": "^5.4.11",
     "vite-plugin-restart": "^0.4.1"
   },
   "dependencies": {
