--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "Cozy-Camp",
+    "name": "cozy-camp",
     "version": "1.0.0",
     "description": "Make your cozy little camp scene",
     "main": "server/server.js",
     "scripts": {
         "start": "node server --ignore client",
-        "dev": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
+        "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
         "install": "cd server && npm i && cd ../client && npm i",
         "seed": "cd server && npm run seed",
         "build": "cd client && npm run build"
@@ -14,7 +14,7 @@
     "author": "Reid Back",
     "license": "ISC",
     "devDependencies": {
-        "concurrently": "^5.1.0"
+        "concurrently": "^5.3.0"
     },
     "dependencies": {
         "bootstrap": "^5.3.3",
