--- a/client/package.json
+++ b/client/package.json
@@ -8,33 +8,33 @@
     "build": "vite build"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "4.3",
-    "vite": "^5.3.3",
-    "vite-plugin-restart": "^0.4.1",
     "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22"
+    "@types/react-dom": "^18.2.22",
+    "@vitejs/plugin-react": "4.3",
+    "vite-plugin-restart": "^0.4.1"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.15",
     "@react-three/drei": "^9.108.1",
     "@react-three/fiber": "^8.16.8",
     "@react-three/rapier": "^1.5.0",
+    "@stripe/stripe-js": "^1.54.0",
+    "@testing-library/react": "^14.0.0",
+    "bootstrap": "^5.2.3",
     "camera-controls": "^2.9.0",
+    "graphql": "^16.6.0",
     "gsap": "^3.12.5",
+    "happy-dom": "^9.20.3",
+    "jwt-decode": "^3.1.2",
     "leva": "^0.9.34",
     "r3f-perf": "^7.2.3",
     "react": "18.3",
     "react-dom": "18.3",
-    "three": "^0.166.1",
-    "vite-plugin-glsl": "^1.3.0",
-    "zustand": "^5.0.1",
-    "bootstrap": "^5.2.3",
-    "@apollo/client": "^3.7.15",
-    "@stripe/stripe-js": "^1.54.0",
-    "@testing-library/react": "^14.0.0",
-    "graphql": "^16.6.0",
-    "happy-dom": "^9.20.3",
-    "jwt-decode": "^3.1.2",
     "react-router-dom": "^6.11.2",
-    "vitest": "^1.4.0"
+    "three": "^0.166.1",
+    "vite": "^6.0.6",
+    "vite-plugin-glsl": "^1.3.0",
+    "vitest": "^1.4.0",
+    "zustand": "^5.0.1"
   }
 }
