--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "lint": "^1.1.2",
         "react-bootstrap": "^2.10.2",
         "react-router-bootstrap": "^0.26.2",
-        "react-window": "^1.8.10"
+        "react-window": "^1.8.10",
+        "vite": "^6.0.7"
     }
 }
