--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,8 @@
     "react-dom": "18.3",
     "react-router-dom": "^6.11.2",
     "three": "^0.166.1",
-    "vite": "^6.0.7",
+    "vite": "^5.4.11",
+    "@vitejs/plugin-react": "^4.3.4",
     "vite-plugin-glsl": "^1.3.0",
     "vitest": "^1.4.0",
     "zustand": "^5.0.1"
