--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "concurrently": "^5.3.0"
     },
     "dependencies": {
+        "axios": "^1.7.9",
         "bootstrap": "^5.3.3",
         "dayjs": "^1.11.11",
         "dotenv": "^16.4.5",
